chore: setup ci
chore: bump package.json
chore: for public repo use official gh runners
docs: add reason for fork
chore: remove version increased assert. we cannot use gynzy patch versions otherwise
chore: convert package-lock.json to yarn.lock
chore: use mongodb vesion wich is used in upstream ci as well

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@socket.io/mongo-adapter",
-  "version": "0.3.0",
+  "version": "0.3.0-gynzy1",
   "description": "The Socket.IO MongoDB adapter, allowing to broadcast events between several Socket.IO servers",
   "license": "MIT",
   "repository": {
@@ -16,7 +16,7 @@
     "test": "npm run format:check && tsc && nyc mocha --require ts-node/register test/index.ts",
     "format:check": "prettier --parser typescript --check 'lib/**/*.ts' 'test/**/*.ts'",
     "format:fix": "prettier --parser typescript --write 'lib/**/*.ts' 'test/**/*.ts'",
-    "prepack": "tsc"
+    "build": "tsc"
   },
   "dependencies": {
     "debug": "~4.3.1",
