--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@socket.io/mongo-adapter",
+  "name": "@gynzy/mongo-adapter",
   "version": "0.3.0-gynzy1",
   "description": "The Socket.IO MongoDB adapter, allowing to broadcast events between several Socket.IO servers",
   "license": "MIT",
