--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,6 +26,7 @@
     "permissions":
       "contents": "read"
       "packages": "write"
+      "pull-requests": "read"
     "runs-on": "ubuntu-latest"
     "steps":
     - "name": "Check out repository code"
