--- a/.github/workflows/publish-prod.yml
+++ b/.github/workflows/publish-prod.yml
@@ -6,9 +6,7 @@
       "contents": "read"
       "packages": "write"
       "pull-requests": "read"
-    "runs-on":
-    - "self-hosted"
-    - "runner-2"
+    "runs-on": "ubuntu-latest"
     "steps":
     - "name": "Check out repository code"
       "uses": "actions/checkout@v3"
@@ -56,7 +54,7 @@
           echo "Setting tag/version for release/tag build.";
           PUBLISHVERSION=$VERSION;
           TAG="latest";
-        elif [[ "${GITHUB_REF_TYPE}" == "branch" && "${GITHUB_REF_NAME}" == "main" ]]; then
+        elif [[ "${GITHUB_REF_TYPE}" == "branch" && ( "${GITHUB_REF_NAME}" == "main" || "${GITHUB_REF_NAME}" == "master" ) ]] || [[ "${GITHUB_EVENT_NAME}" == "deployment" ]]; then
           echo "Setting tag/version for release/tag build.";
           PUBLISHVERSION=$VERSION;
           TAG="latest";
