--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gynzy/mongo-adapter",
-    "version": "0.3.1",
+    "version": "0.3.1-gynzy-1",
     "description": "The Socket.IO MongoDB adapter, allowing to broadcast events between several Socket.IO servers",
     "license": "MIT",
     "repository": {
