--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "npm run format:check && tsc && nyc mocha --require ts-node/register test/index.ts",
     "format:check": "prettier --parser typescript --check 'lib/**/*.ts' 'test/**/*.ts'",
     "format:fix": "prettier --parser typescript --write 'lib/**/*.ts' 'test/**/*.ts'",
-    "prepack": "tsc"
+    "build": "tsc"
   },
   "dependencies": {
     "debug": "~4.3.1",
